# tg_super_downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  System.Diagnostics.Process (aria2c)  System.Diagnostics.Process (python)  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  session_setup.py
scripts/: Start-All.ps1  Start-Bot.ps1  Start-Panel.ps1  Stop-All.ps1  Tray-Manager.ps1  aria2-config.txt  dev.ps1  launch_bot.vbs  launch_panel.vbs  launch_tray.vbs  run-aria2.ps1  run-panel.ps1  setup.ps1  start-bot.bat  start-panel.bat  start-tray.bat  svc-aria2.ps1  svc-bot.ps1  svc-panel.ps1  uninstaltgdl.ps1
tests/: conftest.py  test_aria2.py  test_aria2_headers.py  test_bot_core.py  test_bot_sourceforge_flow.py  test_cancel_cleanup.py  test_cookie_path_windows.py  test_db.py  test_nfo_jellyfin_emby.py  test_playlist_flow.py  test_resolver_sourceforge.py  test_resolvers_mediafire.py  test_resolvers_ssrf.py  test_retry.py  test_run_cycle_mediafire.py  test_smoke.py  test_ytdlp.py  test_ytdlp_regressions.py  test_ytdlp_subs429.py
tests/integration/: test_aria2_rpc.py
tg_super_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tgdl/: cli.py
tgdl/adapters/downloaders/: aria2.py  ytdlp.py
tgdl/adapters/telegram/: bot_app.py
tgdl/config/: settings.py
tgdl/core/: db.py  events.py  logging.py  state.py
tgdl/handlers/: basic_responses.py
tgdl/panel/: api.py
tgdl/schemas/: models.py
tgdl/utils/: paths.py  resolvers.py  retry.py
