[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-super-downloader"
version = "0.1.0"
description = "Telegram advanced downloader (Telethon + aria2 + yt-dlp) with panel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "telethon>=1.36.0",
  "python-telegram-bot>=21.4",
  "APScheduler>=3.10.4",
  "requests>=2.32.3",
  "tenacity>=9.0.0",
  "prometheus-client>=0.21.0",
  "structlog>=24.4.0",
  "yt-dlp>=2025.0.0",   # versión placeholder; se ajusta si hace falta
  "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "black>=24.8.0",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "alembic>=1.13.2"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = ["E","F","I","UP","B","SIM","ASYNC","RUF"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
